--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
     </nav>
     <nav id="video">
         <div id="video-container">
-            <video id="video1" muted="muted">
-                <source src="./mercedes_glk_-_1406 (360p).mp4" type="video/mp4">
-            </video>
+           <iframe width="560" height="315" src="https://www.youtube.com/watch?v=5Fdctidd08w" frameborder="0" allowfullscreen></iframe>
         </div>
     </nav>
     <label for="username">사용자이름:</label>
