--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </nav>
     <nav id="video">
         <div id="video-container">
-           <iframe width="560" height="315" src="https://www.youtube.com/watch?v=5Fdctidd08w" frameborder="0" allowfullscreen></iframe>
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/5Fdctidd08w?si=nGTG_HKkPMGv3JWH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </nav>
     <label for="username">사용자이름:</label>
